--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Jonathan Taylor",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
+    "jquery": "^3.6.0",
     "uuid": "^3.4.0"
   }
 }
