--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "express": "^4.16.4",
     "jquery": "^3.6.0",
     "uuid": "^3.4.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jtdizze/Note-Taker.git"
+}
 }
